--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,73 @@
-body {
-    background: black;
-    color: #ED3126;
-    text-decoration: none;
+body{ 
+	background: #363636; 
+    font-family: Helvetica, Arial, sans-serif;
 }
 
-footer {
-    color: #FDD102;
+a {
+    color:#ff894c;
+}
+
+.container {
+    margin: 120px auto;
+    max-width: 600px;
+}
+
+
+header {
+    margin-bottom: 30px;
+}
+
+
+h1 {
+    text-align: center;
+    font-weight: 800;
+    font-size: 36px;
+    line-height: 1.5;
+    color: #dc2f2f;
+}
+
+form { 
+	background-color: #f8f8f8; 
+    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.03);
+    padding: 30px;
+    border-radius: 10px;
+    display: flex;
+    margin-bottom: 30px;
+}
+
+.instructions {
+    padding: 16px;
+    border: 1px solid rgba(39, 33, 66, 0.5);
+    width: 80%;
+    font-size: 16px;
+    border-radius: 50px;
+    line-height: 20px;
+    color: #272044;
+}
+
+.submit-button {
+    margin-left: 10px;
+    background: #ff894c;
+    color: white;
+    border: none;
+    width: 150px;
+    font-size: 16px;
+    border-radius: 50px;
+    padding: 14px 24px;
+}
+
+.poem { 
+    font-size: 16px;
+	background: #fff; 
+    padding: 20px;
+    line-height: 2;
+    border-left: 3px solid #ff894c;
+    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.03);
+}
+
+footer { 
+	color: white; 
+    text-align: center;
+    font-size: 14px;
+    margin-top: 30px;
 }
