--- a/src/style.css
+++ b/src/style.css
@@ -26,13 +26,24 @@ h1 {
     color: #dc2f2f;
 }
 
-form { 
-	background-color: #f8f8f8; 
-    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.03);
-    padding: 30px;
-    border-radius: 10px;
-    display: flex;
+.form-container {
+    background-color: #f8f8f8; 
     margin-bottom: 30px;
+    border-radius: 10px;
+    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.03);
+    padding: 15px 20px;
+
+}
+
+form { 
+    display: flex;
+}
+
+.hint {
+    line-height: 1.5;
+    margin-top: 5px;
+    opacity: 0.6;
+    font-size: 12px;
 }
 
 .instructions {
@@ -65,6 +76,10 @@ form {
     box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.03);
 }
 
+.hidden {
+    display: none;
+}
+
 .poem strong {
     color: #885df1;
 }
@@ -74,4 +89,20 @@ footer {
     text-align: center;
     font-size: 14px;
     margin-top: 30px;
+}
+
+.generating {
+    animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+    to {
+        visibility: hidden;
+    }
+}
+
+@-webkit-keyframes blink-animation {
+    to {
+        visibility: hidden;
+    }
 }
